Import of DLUX/Class-Date-0.91 from CPAN.
gitpan-cpan-distribution: Class-Date
gitpan-cpan-version:      0.91
gitpan-cpan-path:         DLUX/Class-Date-0.91.tar.gz
gitpan-cpan-author:       DLUX
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Class::Date - Class for easy date and time manipulation
 
 SYNOPSIS
-      use Class::Date qw(date localdate gmdate $DATE_FORMAT);
+      use Class::Date qw(date localdate gmdate);
   
       # creating absolute date object (local time)
       $date = new Class::Date [$year,$month,$day,$hour,$min,$sec];
