--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Class::Date.
 
+0.91	Mon Apr  9 13:42:49 CEST 2001
+	- small bugfixes for perl 5.005
+	- date(undef) and Class::Date::Rel(undef) returns undef
+	- array method fix (year + 1900, month + 1)
+	- $DATE_FORMAT is not exportable any more (confusing)
+	- test fixes
+
 0.90	Thu Apr  5 13:18:18 CEST 2001
 	- Complete rewrite based on Matt Sergeant's Time::Object
 	- Can handle GMT and local time also
