--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Class::Date.
 
+0.95    Thu May 10 00:11:43 CEST 2001
+	- Fixed comparison problem with undef
+	- date("2001-01-31")+'1M'-'1M' != "2001-01-31" "bug" documented
+	- Fixed the module name in two places (it was Date::Class)
+
 0.94    Thu Apr 26 16:30:39 CEST 2001
 	- $date-'1D' bug fixed
 	- added "now" function
