--- a/README
+++ b/README
@@ -133,6 +133,10 @@ SYNOPSIS
       # comparison between relative dates
       print $reldate1 > $reldate2 ? "I am faster" : "I am slower";
 
+      # Adding / Subtracting months and years are sometimes tricky:
+      print date("2001-01-29") + '1M' - '1M'; # gives "2001-02-01"
+      print date("2000-02-29") + '1Y' - '1Y'; # gives "2000-03-01"
+
 DESCRIPTION
     This module is intended to provide a general-purpose date and datetime
     type for perl. You have a Class::Date class for absolute date and
@@ -320,16 +324,27 @@ DST_ADJUST
         print $date."\n";
       }
 
+MONTHS AND YEARS
+    If you add or subtract "months" and "years" to a date, you may get wrong
+    dates, e.g when you add one month to 2001-01-31, you expect to get
+    2001-02-31, but this date is invalid and converted to 2001-03-03. Thats'
+    why
+
+      date("2001-01-31") + '1M' - '1M' != "2001-01-31"
+
+    This problem can occur only with months and years, because others can
+    easily be converted to seconds.
+
 INTERNALS
     This module uses operator overloading very heavily. I've found it quite
     stable, but I am afraid of it a bit.
 
-    Date::Class object is an array reference.
+    A Class::Date object is an array reference.
 
-    Date::Class::Rel object is an array reference, which contains month and
-    second information. I need to store it as an array ref, because array
-    and month values cannot be converted into seconds, because of our super
-    calendar.
+    A Class::Date::Rel object is an array reference, which contains month
+    and second information. I need to store it as an array ref, because
+    array and month values cannot be converted into seconds, because of our
+    super calendar.
 
     You can add code references to the @Class::Date::NEW_FROM_SCALAR and
     @Class::Date::Rel::NEW_FROM_SCALAR. These arrays are iterated through
