--- a/README
+++ b/README
@@ -59,7 +59,7 @@ SYNOPSIS
       $date->monname;     # name of month, eg: March
       $date->monthname;   # same as prev.
       $date->wdayname;    # Thursday
-      $date->day_of_weekname; # same as prev.
+      $date->day_of_weekname # same as prev.
       $date->hms          # 01:23:45
       $date->ymd          # 2000/02/29
       $date->mdy          # 02/29/2000
@@ -80,6 +80,10 @@ SYNOPSIS
   
       %hash=$date->hash;
 
+      $date->month_begin  # First day of the month (date object)
+      $date->month_end    # Last day of the month
+      $date->days_in_month # 28..31
+
       # date format changes
       {
         local $Class::Date::DATE_FORMAT="%Y%m%d%H%M%S";
@@ -93,6 +97,12 @@ SYNOPSIS
       # adjusting DST in calculations  (see the doc)
       $Class::Date::DST_ADJUST = 1; # this is the default
       $Class::Date::DST_ADJUST = 0;
+
+      # "month-border adjust" flag 
+      $Class::Date::MONTH_BORDER_ADJUST = 0; # this is the default
+      print date("2001-01-31")+'1M'; # will print 2001-03-03
+      $Class::Date::MONTH_BORDER_ADJUST = 1;
+      print date("2001-01-31")+'1M'; # will print 2001-02-28
 
       # getting values of a relative date object
       $reldate;              # reldate in seconds (assumed 1 month = 2_629_744 secs)
@@ -112,14 +122,14 @@ SYNOPSIS
       print date([2001,12,11,4,5,6])->truncate; 
                                    # will print "2001-12-11"
       $new_date = $date+$reldate;
-      $date2    = $date+'3Y';      # 3 Year
-      $date3    = $date+[1,2,3];   # $date plus 1 year, 2 month, 3 days
-      $date4    = $date+'3-1-5'    # $date plus 3 year, 1 month, 5 days
+      $date2    = $date+'3Y 2D';   # 3 Years and 2 days
+      $date3    = $date+[1,2,3];   # $date plus 1 year, 2 months, 3 days
+      $date4    = $date+'3-1-5'    # $date plus 3 years, 1 months, 5 days
 
       $new_date = $date-$reldate;
-      $date2    = $date-'3Y';      # 3 Year
-      $date3    = $date-[1,2,3];   # $date minus 1 year, 2 month, 3 days
-      $date4    = $date-'3-1-5'    # $date minus 3 year, 1 month, 5 days
+      $date2    = $date-'3Y';      # 3 Yearss
+      $date3    = $date-[1,2,3];   # $date minus 1 year, 2 months, 3 days
+      $date4    = $date-'3-1-5'    # $date minus 3 years, 1 month, 5 days
 
       $new_reldate = $date1-$date2;
       $reldate2 = Class::Date->new('2000-11-12')-'2000-11-10';
@@ -189,7 +199,8 @@ USAGE
         A valid 32-bit integer: This is parsed as a unix time.
 
     "YYYY-MM-DD hh::mm:ss"
-        A standard ISO date format. Additional ".fraction" part is ignored.
+        A standard ISO date format. Additional ".fraction" part is ignored,
+        ":ss" can be omitted.
 
     additional input formats
         You can specify "-DateParse" as an import parameter, e.g:
@@ -198,7 +209,8 @@ USAGE
 
         With this, the module will try to load Date::Parse module, and if it
         find it then all these formats can be used as an input. Please refer
-        to the Date::Parse documentation (this part is not tested).
+        to the Date::Parse documentation (this part is not tested by the
+        author but is reported to work).
 
   Operations
 
@@ -335,6 +347,21 @@ MONTHS AND YEARS
     This problem can occur only with months and years, because others can
     easily be converted to seconds.
 
+MONTH_BORDER_ADJUST
+    $MONTH_BORDER_ADJUST variable is used to switch on or off the
+    month-adjust feature. This is used only when someone adds months or
+    years to a date and then the resulted date became invalid. An example:
+    adding one month to "2001-01-31" will result "2001-02-31", and this is
+    an invalid date.
+
+    When $MONTH_BORDER_ADJUST is false, this result simply normalized, and
+    becomes "2001-03-03". This is the default behaviour.
+
+    When $MONTH_BORDER_ADJUST is true, this result becomes "2001-02-28". So
+    when the date overflows, then it returns the last day insted.
+
+    Both settings keeps the time information.
+
 INTERNALS
     This module uses operator overloading very heavily. I've found it quite
     stable, but I am afraid of it a bit.
@@ -364,17 +391,42 @@ INTERNALS
     versions (0.91-) soon, and then I want to release the version 1.0 if no
     bugs can be found in that period.
 
-BUGS
-    *   This module uses the POSIX functions for date and time calculations,
-        so it is not working for dates beyond 2038 and before 1902. I hope
-        that someone will fix this with new time_t in libc. If you really
-        need dates over 2038, you need to completely rewrite this module or
-        use Date::Calc or other date modules.
+DEVELOPMENT FOCUS
+    The first goal when I have developed this module is to make this module
+    very easy to use.
 
-    *   This version of the module is known not to work in Win32 and Solaris
-        (and possibly other platforms), because strftime on these platform
-        does not have a "%s" macro. However this module is reported (by the
-        CPAN::Testers) to work on FreeBSD and Linux.
+    The second most important goal was to make it full-featured.
+
+    The third most important goal was to make it work everywhere. The only
+    issue with this was the 'strftime("%s")' problem, I hope it has been
+    solved.
+
+    The fourth most important goal was to make it use as low memory as
+    possible. It is an issue if someone runs this module under mod_perl.
+
+    I hope all these goals can be reached by the 1.0 release.
+
+    Speed was not an issue until 1.0, because people usually do not need to
+    do tons of date manipulations in a short time.
+
+SPEED ISSUES
+    There are two kind of adjustment in this module, DST_ADJUST and
+    MONTH_BORDER_ADJUST. Both of them makes the "+" and "-" operations
+    slower. If you don't need them, switch them off to achieve faster
+    calculations.
+
+    In general, if you really need fast date and datetime calculation, don't
+    use this module. As you see in the previous section, the focus of
+    development is not the speed until 1.0. For fast date and datetime
+    calculations, use Date::Calc instead.
+
+BUGS
+    *   This module uses the POSIX functions (but not the POSIX module) for
+        date and time calculations, so it is not working for dates beyond
+        2038 and before 1902. I hope that someone will fix this with new
+        time_t in libc. If you really need dates over 2038, you need to
+        completely rewrite this module or use Date::Calc or other date
+        modules.
 
 COPYRIGHT
     Copyright (c) 2001 Szabó, Balázs (dLux)
@@ -390,7 +442,7 @@ AUTHOR
 CREDITS
       - Matt Sergeant <matt@sergeant.org>
         (Lots of code are borrowed from the Time::Object module)
-      - Tatsuhiko Miyagawa <miyagawa@edge.co.jp> (bugfixes)
+      - Tatsuhiko Miyagawa <miyagawa@cpan.org> (bugfixes)
 
 SEE ALSO
     perl, Date::Calc, Time::Object.
