--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Class::Date.
 
+1.0.0   Mon Jun 11 14:58:29 CEST 2001
+	- it is now requires perl 5.6 because of using Time::Local
+	- stable release, basically the same as 0.98
+
 0.98   	Tue May 22 16:46:03 CEST 2001
 	- bug in "truncate" method fixed
 	- documentation changes
