--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Class::Date - Class for easy date and time manipulation
 
 SYNOPSIS
-      use Class::Date qw(date localdate gmdate now);
+      use Class::Date qw(:errors date localdate gmdate now);
   
       # creating absolute date object (local time)
       $date = new Class::Date [$year,$month,$day,$hour,$min,$sec];
@@ -71,18 +71,32 @@ SYNOPSIS
 
       ($year,$month,$day,$hour,$min,$sec)=$date->array;
       ($year,$month,$day,$hour,$min,$sec)=@{ $date->aref };
+      # !! $year: 1900-, $month: 1-12
 
       ($sec,$min,$hour,$day,$mon,$year,$wday,$yday,$isdst)=$date->struct;
       ($sec,$min,$hour,$day,$mon,$year,$wday,$yday,$isdst)=@{ $date->sref };
+      # !! $year: 0-, $month: 0-11
 
-      $hash=$date->href;
+      $hash=$date->href; # $href can be reused as a constructor
       print $hash->{year}."-".$hash->{month}. ... $hash->{sec} ... ;
   
       %hash=$date->hash;
+      # !! $hash{year}: 1900-, $hash{month}: 1-12
+
+      # set part of the date
+      $date->year(2002);
+      $date->_year(102);
+      $date->mon(11);    # 1-12
+      $date->_mon;       # 0-11
 
       $date->month_begin  # First day of the month (date object)
       $date->month_end    # Last day of the month
       $date->days_in_month # 28..31
+
+      # constructing new date based on an existing one:
+      $new_date = $date->set( year => 1977, sec => 14 );
+      # valid keys: year, _year, month, mon, _month, _mon, day, mday, day_of_month,
+      #             hour, min, minute, sec, second
 
       # date format changes
       {
@@ -94,6 +108,14 @@ SYNOPSIS
         print $date       # result: 1994/10/13
       }
 
+      # error handling
+      $a = date($date_string);
+      if ($a) { # valid date
+        ...
+      } else { # invalid date
+        if $a->error == E_INVALID ... 
+      }
+
       # adjusting DST in calculations  (see the doc)
       $Class::Date::DST_ADJUST = 1; # this is the default
       $Class::Date::DST_ADJUST = 0;
@@ -103,6 +125,12 @@ SYNOPSIS
       print date("2001-01-31")+'1M'; # will print 2001-03-03
       $Class::Date::MONTH_BORDER_ADJUST = 1;
       print date("2001-01-31")+'1M'; # will print 2001-02-28
+
+      # date range check
+      $Class::Date::RANGE_CHECK = 0; # this is the default
+      print date("2001-02-31"); # will print 2001-03-03
+      $Class::Date::RANGE_CHECK = 1; # this is the default
+      print date("2001-02-31"); # will print nothing
 
       # getting values of a relative date object
       $reldate;              # reldate in seconds (assumed 1 month = 2_629_744 secs)
@@ -293,6 +321,14 @@ USAGE
         to 0) with the "truncate" or "trunc" method. It does not modify the
         specified object, it returns with a new one.
 
+    set You can create new date object based on an existing one, by using
+        the "set" method. Note, this DOES NOT modify the base object.
+
+          $new_date = $date->set( year => 2001, hour => 14 );
+
+        The valid keys are: year, _year, month, mon, _month, _mon, day,
+        mday, day_of_month, hour, min, minute, sec, second.
+
     Operations with Class::Date::Rel
         The Class::Date::Rel object consists of a month part and a day part.
         Most people only use the "day" part of it. If you use both part,
@@ -317,6 +353,63 @@ USAGE
     You can use the methods methods described at the top of the document if
     you want to access parts of the data which is stored in a Class::Date
     and Class::Date::Rel object.
+
+  Error handling
+
+    If a date object became invalid, then the object will be reblessed to
+    Class::Date::Invalid. This object is false in boolean environment, so
+    you can test the date validity like this:
+
+      $a = date($input_date);
+      if ($a) { # valid date
+          ...
+      } else { # invalid date
+          ...
+      }
+
+    Note even the date is invalid, the expression "defined $a" always
+    returns true, so the following is wrong:
+
+      $a = date($input_date);
+      if (defined $a) ... # WRONG!!!!
+
+    You can test the error by getting the $date->error value. You might
+    import the ":errors" tag:
+
+      use Class::Date qw(:errors);
+
+    Possible error values are:
+
+    E_OK
+        No errors.
+
+    E_INVALID
+        Invalid date. It is set when some of the parts of the date are
+        invalid, and Time::Local functions cannot convert them to a valid
+        date.
+
+    E_RANGE
+        This error is set, when parts of the date are valid, but the whole
+        date is not valid, e.g. 2001-02-31. When the
+        $Class::Date::RANGE_CHECK is not set, then these date values are
+        automatically converted to a valid date: 2001-03-03, but the
+        $date->error value are set to E_RANGE. If $Class::Date::RANGE_CHECK
+        is set, then a date "2001-02-31" became invalid date.
+
+    E_UNPARSABLE
+        This error is set, when the constructor cannot be created from a
+        scalar, e.g:
+
+          $a = date("4kd sdlsdf lwekrmk");
+
+    E_UNDEFINED
+        This error is set, when you want to create a date object from an
+        undefined value:
+
+          $a = new Class::Date (undef);
+
+        Note, that localdate(undef) will create a valid object, because it
+        calls $Class::Date(time).
 
 DST_ADJUST
     $DST_ADJUST is an importable variable, and is a very important
@@ -387,9 +480,8 @@ INTERNALS
     regarding this, please drop me an email with the description of the
     problem, and I will set the compatibility back.
 
-    As of 0.90 this code is in alpha status, and I want to release the beta
-    versions (0.91-) soon, and then I want to release the version 1.0 if no
-    bugs can be found in that period.
+    Invalid dates are Class::Date::Invalid objects. Every method call on
+    this object and every operation with this object returns undef or 0.
 
 DEVELOPMENT FOCUS
     The first goal when I have developed this module is to make this module
@@ -403,8 +495,6 @@ DEVELOPMENT FOCUS
 
     The fourth most important goal was to make it use as low memory as
     possible. It is an issue if someone runs this module under mod_perl.
-
-    I hope all these goals can be reached by the 1.0 release.
 
     Speed was not an issue until 1.0, because people usually do not need to
     do tons of date manipulations in a short time.
@@ -423,7 +513,7 @@ SPEED ISSUES
 BUGS
     *   This module uses the POSIX functions (but not the POSIX module) for
         date and time calculations, so it is not working for dates beyond
-        2038 and before 1902. I hope that someone will fix this with new
+        2038 and before 1970. I hope that someone will fix this with new
         time_t in libc. If you really need dates over 2038, you need to
         completely rewrite this module or use Date::Calc or other date
         modules.
@@ -443,6 +533,7 @@ CREDITS
       - Matt Sergeant <matt@sergeant.org>
         (Lots of code are borrowed from the Time::Object module)
       - Tatsuhiko Miyagawa <miyagawa@cpan.org> (bugfixes)
+      - Stas Bekman <stas@stason.org> (suggestions, bugfix)
 
 SEE ALSO
     perl, Date::Calc, Time::Object.
