--- a/README
+++ b/README
@@ -521,13 +521,27 @@ SPEED ISSUES
     development is not the speed until 1.0. For fast date and datetime
     calculations, use Date::Calc instead.
 
-BUGS
+BUGS AND LIMITATIONS
     *   This module uses the POSIX functions (but not the POSIX module) for
         date and time calculations, so it is not working for dates beyond
         2038 and before 1970. I hope that someone will fix this with new
         time_t in libc. If you really need dates over 2038, you need to
         completely rewrite this module or use Date::Calc or other date
         modules.
+
+    *   This module uses Time::Local, and when it croaks, Class::Date
+        returns "Invalid date or time" error message. Time::Local is
+        different in the 5.005 and 5.6.x version of perl, so the following
+        code will return different results:
+
+          $a = date("2006-11-11")->clone(year => -1);
+
+        In perl 5.6.1, it returns an invalid date with error message "Invali
+        date or time", in perl 5.005 it returns an invalid date with range
+        check error. Both are false if you use them in boolean context
+        though, only the error message is different, but don't rely on the
+        error message in this case. It however works in the same way if you
+        change other fields than "year" to an invalid field.
 
 COPYRIGHT
     Copyright (c) 2001 Szabó, Balázs (dLux)
