--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Class::Date.
 
+1.0.7	Mon Oct 15 00:22:47 CEST 2001
+	- fix for function name clash in bleadperl
+	- Documentation update: Win32 and support chapters added,
+	  Development focus rewritten
+
 1.0.6   Thu Oct 11 14:26:27 CEST 2001
 	- Fixed a bug with month_end and newer stable perls (5.6.1)
 	- Fixed a bug with Time::Local in perl 5.7.2
