Import of DLUX/Class-Date-1.0.10 from CPAN.
gitpan-cpan-distribution: Class-Date
gitpan-cpan-version:      1.0.10
gitpan-cpan-path:         DLUX/Class-Date-1.0.10.tar.gz
gitpan-cpan-author:       DLUX
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -548,12 +548,21 @@ SPEED ISSUES
     calculations, use Date::Calc instead.
 
 BUGS AND LIMITATIONS
-    *   This module uses the POSIX functions (but not the POSIX module) for
-        date and time calculations, so it is not working for dates beyond
-        2038 and before 1970. I hope that someone will fix this with new
-        time_t in libc. If you really need dates over 2038, you need to
-        completely rewrite this module or use Date::Calc or other date
-        modules.
+    *   This module uses the POSIX functions for date and time calculations,
+        so it is not working for dates beyond 2038 and before 1902.
+
+        I don't know what systems support dates in 1902-1970 range, it may
+        not work on your system because. I know it works on the Linux glibc
+        system with perl 5.6.1 and 5.7.2. I know it does not work with perl
+        5.005_03 (It may be the bug of the Time::Local module). Please
+        report if you know any system where it does _not_ work with perl
+        5.6.1 or later.
+
+        I hope that someone will fix this with new time_t in libc. If you
+        really need dates over 2038 and before 1902, you need to completely
+        rewrite this module or use Date::Calc or other date modules.
+
+        Note: I can use
 
     *   This module uses Time::Local, and when it croaks, Class::Date
         returns "Invalid date or time" error message. Time::Local is
