Import of DLUX/Class-Date-1.1.1 from CPAN.
gitpan-cpan-distribution: Class-Date
gitpan-cpan-version:      1.1.1
gitpan-cpan-path:         DLUX/Class-Date-1.1.1.tar.gz
gitpan-cpan-author:       DLUX
gitpan-cpan-maturity:     released

--- a/Date.pod
+++ b/Date.pod
@@ -122,7 +122,8 @@ Class::Date - Class for easy date and time manipulation
   if ($a) { # valid date
     ...
   } else { # invalid date
-    if $a->error == E_INVALID ... 
+    if ($a->error == E_INVALID) { ... }
+    print $a->errstr;
   }
 
   # adjusting DST in calculations  (see the doc)
@@ -267,7 +268,7 @@ A mysql-style timestamp value, which consist of at least 14 digit.
 
 A valid 32-bit integer: This is parsed as a unix time.
 
-=item "YYYY-MM-DD hh::mm:ss"
+=item "YYYY-MM-DD hh:mm:ss"
 
 A standard ISO(-like) date format. Additional ".fraction" part is ignored, 
 ":ss" can be omitted.
@@ -323,7 +324,7 @@ different: all zero.
 
 A valid 32-bit integer is parsed as seconds.
 
-=item "YYYY-MM-DD hh::mm:ss"
+=item "YYYY-MM-DD hh:mm:ss"
 
 A standard ISO date format, but this is parsed as relative date date and time,
 so month, day and year can be zero (and defaults to zero).
@@ -438,7 +439,8 @@ test the date validity like this:
   if ($a) { # valid date
       ...
   } else { # invalid date
-      ...
+      if ($a->error == E_INVALID) { ... }
+      print $a->errstr;
   }
 
 Note even the date is invalid, the expression "defined $a" always returns
@@ -490,6 +492,8 @@ Note, that localdate(undef) will create a valid object, because it calls
 $Class::Date(time).
 
 =back
+
+You can get the error in string form by calling the "errstr" method.
 
 =head1 DST_ADJUST
 
