--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Class::Date.
 
+1.1.3   Fri Jan  3 09:07:01 CET 2003
+	- Fixed a warning in the strftime method
+
 1.1.2   Sat Dec 14 14:46:41 CET 2002
 	- Test and report buggy strftime implementation
 	- Fix for strftime
